# HarnessClaw

./: .gitignore  LICENSE  README.md  agents.yaml  pyproject.toml  requirements.txt  setup.py
docs/superpowers/plans/: 2026-03-28-ai-gateway-ui.md  2026-03-28-claude-code-sessions.md  2026-03-30-pty-terminal-sessions.md  2026-03-31-agent-os-phase1.md  2026-04-02-phase2-code-review-workflow.md  2026-04-02-semantic-memory-search.md  (+3 more)
harness_claw/: agent_registry.py  cli.py  cost_poller.py  job_runner.py  model.py  pricing.py  pty_session.py  role_registry.py  server.py  session.py
harness_claw/api/: roles.py  sessions.py  websocket.py
harness_claw/gateway/: audit.py  auth.py  broker.py  capability.py  event_bus.py  mcp_server.py  memory.py  policy.py  task_store.py  workflow_engine.py
harness_claw/providers/: anthropic.py  base.py  claude_code.py
harness_claw/runtime/: job_runner.py  pty_session.py  session_store.py
tests/: test_claude_code_provider.py  test_cost_poller.py  test_job_runner.py  test_pricing.py  test_pty_session.py  test_role_registry.py  test_session.py  test_session_store.py
tests/gateway/: test_audit.py  test_auth.py  test_broker.py  test_capability.py  test_event_bus.py  test_mcp.py  test_memory.py  test_policy.py  test_review_cycle.py  test_task_store.py  test_workflow_engine.py  test_workflow_mcp.py
tests/runtime/: test_cost_poller.py  test_job_runner.py  test_pty_session.py  test_role_registry.py  test_session.py  test_session_store.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  index.css  types.ts  ws.ts
(+26 files in other folders)
